@@ -34,6 +34,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=cada dia
 repeatDetailsRuleDaily2=cada dia a partir de demà
 repeatDetailsRuleDaily3=cada %1$S dies
