@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=každý den
 repeatDetailsRuleDaily2=každý druhý den
 repeatDetailsRuleDaily3=každých %1$S dní
