@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=jeden Tag
 repeatDetailsRuleDaily2=jeden 2. Tag
 repeatDetailsRuleDaily3=jeden %1$S. Tag
