@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=cada d\u00EDa
 repeatDetailsRuleDaily2=cada otro d\u00EDa
 repeatDetailsRuleDaily3=cada %1$S d\u00EDas
