@@ -36,6 +36,9 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
+
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
 repeatDetailsRuleDaily1 = cada día
 repeatDetailsRuleDaily2 = cada dos días
 repeatDetailsRuleDaily3 = cada %1$S días
