@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="Il y a un conflit avec l'horaire d'un ou plusieurs participants.\nVoulez-vous conserver les paramètres actuel malgré tout?"
+
 repeatDetailsRuleDaily1=chaque jour
 repeatDetailsRuleDaily2=un jour sur deux
 repeatDetailsRuleDaily3=tous les %1$S jours
