@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=minden nap
 repeatDetailsRuleDaily2=minden másnap
 repeatDetailsRuleDaily3=minden %1$S nap
