@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=hvern dag
 repeatDetailsRuleDaily2=annan hvorn dag
 repeatDetailsRuleDaily3=%1$S hvern dag
