@@ -36,6 +36,9 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
+
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
 repeatDetailsRuleDaily1 = tutti i giorni
 repeatDetailsRuleDaily2 = tutti gli altri giorni
 repeatDetailsRuleDaily3 = ogni %1$S giorni
