@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=\u10e7\u10dd\u10d5\u10d4\u10da \u10d3\u10e6\u10d4\u10e1
 repeatDetailsRuleDaily2=\u10e7\u10dd\u10d5\u10d4\u10da \u10e8\u10d4\u10db\u10d3\u10d4\u10d2 \u10d3\u10e6\u10d4\u10e1
 repeatDetailsRuleDaily3=\u10e7\u10dd\u10d5\u10d4\u10da %1$S \u10d3\u10e6\u10d4\u10e1
