@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=매일
 repeatDetailsRuleDaily2=매 다른 일자
 repeatDetailsRuleDaily3=매 %1$S 일
