@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=kasdien
 repeatDetailsRuleDaily2=kas antrą dieną
 repeatDetailsRuleDaily3=kas %1$S dieną
