@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=hver dag
 repeatDetailsRuleDaily2=annenhver dag
 repeatDetailsRuleDaily3=hver %1$S dager
