@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=elke dag
 repeatDetailsRuleDaily2=om de twee dagen
 repeatDetailsRuleDaily3=elke %1$S dagen
