@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=kvar dag
 repeatDetailsRuleDaily2=annankvar dag
 repeatDetailsRuleDaily3=kvar %1$S dagar
