@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 # Look at first on /mozilla/calendar/prototypes/wcap/sun-calendar-event-dialog.js
 
 repeatDetailsRuleDaily1=Codziennie
