@@ -37,6 +37,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=todo dia
 repeatDetailsRuleDaily2=em dias alternados
 repeatDetailsRuleDaily3=a cada %1$S dias
