@@ -35,6 +35,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=todos os dias
 repeatDetailsRuleDaily2=todos os outros dias
 repeatDetailsRuleDaily3=a cada %1$S dias
