@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=în fiecare zi
 repeatDetailsRuleDaily2=în fiecare altă zi
 repeatDetailsRuleDaily3=la fiecare %1$S zile
