@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=каждый день
 repeatDetailsRuleDaily2=через день
 repeatDetailsRuleDaily3=каждый %1$S день
