@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=varje dag
 repeatDetailsRuleDaily2=varannan dag
 repeatDetailsRuleDaily3=var %1$S dag
