@@ -35,6 +35,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=щодня
 repeatDetailsRuleDaily2=щоіншого дня
 repeatDetailsRuleDaily3=кожних %1$S днів
