@@ -36,6 +36,9 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# Attendees window
+confirmTimeConflict="A time conflict exists with one or more attendees.\nWould you like to keep the current settings anyway?"
+
 repeatDetailsRuleDaily1=每天
 repeatDetailsRuleDaily2=每隔一天
 repeatDetailsRuleDaily3=每 %1$S 天
